# X17_n_TOF

./: .gitignore  CMakeLists.txt
code/: utils.cpp  utils.h
code/cube/: ntofDAQ .cpp  ntofDAQ.h
code/sipm/: anasipm_timing.cpp  ntofDAQ.h  output.txt  scintifers.h  sipm_analysis.cpp  sipm_analysis.h  sipm_classes.cpp  sipm_classes.h
code/urwell/: eventDisplay.h  getSRStime.awk  mmRawTree.C  mmRawTree.cpp  mmRawTree.h  multisetfit.py  output.txt  readme.md  urwana.cpp  urwana.h  urwell_analysis.cpp  urwell_analysis.h  utilf.h
